Bug 159560 - Paragraph break should not change to random symbol
Summary: Paragraph break should not change to random symbol
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Oliver Specht (CIB)
URL:
Whiteboard: target:24.8.0 target:24.2.1
Keywords:
Depends on:
Blocks:
 
Reported: 2024-02-05 08:37 UTC by Oliver Specht (CIB)
Modified: 2024-02-12 15:43 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (21.84 KB, image/jpeg)
2024-02-05 08:37 UTC, Oliver Specht (CIB)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Specht (CIB) 2024-02-05 08:37:49 UTC
Created attachment 192399 [details]
Screenshot

If a paragraph ends with a character using a symbol font the paragraph symbol changes. It should always be ΒΆ (Pilcrow sign)
Comment 1 V Stuart Foote 2024-02-05 14:06:31 UTC
Hadn't noticed but confirmed. Paragraphs composed with "symbol" fonts that do not have coverage of the U+00B6 PILCROW glyph [1], will need to fallback to a font with coverage. Should probably be OpenSymbol that we deploy.

Kind of seems like a more recent issue, not OOo era.

=-ref-=

[1] e.g. neither Webdings nor Wingdings (or the Wingdings 2, Wingdings 3 of attachment)
Comment 2 Commit Notification 2024-02-08 14:17:47 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d1320c634817e4edb0d76da26178f323c6c675f2

tdf#159560 paragraph break should be shown as pilcrow sign

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-02-08 23:03:23 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/49f63872d7149778efdd1add6f9eb0b7ca254089

tdf#159560 paragraph break should be shown as pilcrow sign

It will be available in 24.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.