tdf#159560 paragraph break should be shown as pilcrow sign

When non-printing characters are switched on at the end of the paragraph
a pilcrow sign is shown. This is displayed using the font at the end of
the character. If a symbol font is used that would result in a random symbol
instead of the pilcrow sign (0x00b6). This is fixed here.

Change-Id: I0d4ae9f439d2e34ca774d4e2cb188e94290808a8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162983
Tested-by: Jenkins
Reviewed-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Tested-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
(cherry picked from commit 297b47a7e0c191be22f90ab799b4b8bb8bdbaf59)